client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
        name: client-deployment
spec:
        replicas: 1
        selector: 
                matchLabels:
                        component: web
        template:
                metadata:
                        labels:
                                component: web
                spec:
                        containers:
                                - name: client
                                  image: rickywraith/containers-client:v6
                                  ports:
                                          - containerPort: 3000
