client-pod.yml
apiVersion: v1
kind: Pod
metadata:
        name: client-pod
        labels:
                component: web
spec: 
        containers:
                - name: client
                  image: rickywraith/containers-client
                  ports:
                          - containerPort: 3000
